[project]
name = "aiosteamist"
version = "1.0.0"
license = "Apache-2.0"
description = "Control Steamist steam systems"
authors = [{ name = "J. Nick Koston", email = "nick@koston.org" }]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["classifiers", "dependencies", "optional-dependencies"]

[project.urls]
"Repository" = "https://github.com/bdraco/aiosteamist"
"Documentation" = "https://aiosteamist.readthedocs.io"
"Bug Tracker" = "https://github.com/bdraco/aiosteamist/issues"
"Changelog" = "https://aiosteamist.readthedocs.io/changelog.html"

[tool.poetry]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "aiosteamist" },
]

[tool.poetry.dependencies]
python = "^3.10"

# Documentation Dependencies
Sphinx = {version = ">=5.0.0", optional = true}
sphinx-rtd-theme = {version = ">=1.0.0", optional = true}
myst-parser = {version = ">=0.16.0", optional = true}
xmltodict = ">=0.12.0"
aiohttp = ">=3.9.1"

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.group.dev.dependencies]
black = ">=21.11b1"
flake8 = ">=4.0.0"
isort = ">=5.10.1"
pytest = ">=6.1.2"
pytest-cov = ">=3.0.0"
pyupgrade = ">=2.29.1"
tox = ">=3.20.1"
pytest-asyncio = ">=0.23.4"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "aiosteamist/__init__.py:__version__",
]
build_command = "pip install poetry && poetry build"


[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=aiosteamist"

[tool.isort]
profile = "black"
known_first_party = ["aiosteamist", "tests"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
